--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
